--- a/GetURLContent/App.config
+++ b/GetURLContent/App.config
@@ -16,6 +16,12 @@
             <setting name="RegexPatternSecond" serializeAs="String">
                 <value>(\b(?:(?:https?|ftp|file|[A-Za-z]+):\/\/|www\.|ftp\.)(?:\([-A-Z0-9+&amp;@#\/%=~_ |$?!:,.]*\)|[-A-Z0-9+&amp;@#\/%=~_ |$?!:,.])*(?:\([-A-Z0-9+&amp;@#\/%=~_ |$?!:,.]*\)|[A-Z0-9+&amp;@#\/%=~_ |$]))</value>
             </setting>
+            <setting name="RegExPatternFirstImagezilla" serializeAs="String">
+                <value>&lt;img id="photo" src="(\b(?:(?:https?|ftp|file|[A-Za-z]+):\/\/|www\.|ftp\.)(?:\([-A-Z0-9+&amp;@#\/%=~_ |$?!:,.]*\)|[-A-Z0-9+&amp;@#\/%=~_ |$?!:,.])*(?:\([-A-Z0-9+&amp;@#\/%=~_ |$?!:,.]*\)|[A-Z0-9+&amp;@#\/%=~_ |$]))</value>
+            </setting>
+            <setting name="RegExPatternFirstForLinks" serializeAs="String">
+                <value>href="(\b(?:(?:https?|ftp|file|[A-Za-z]+):\/\/|www\.|ftp\.)(?:\([-A-Z0-9+&amp;@#\/%=~_ |$?!:,.]*\)|[-A-Z0-9+&amp;@#\/%=~_ |$?!:,.])*(?:\([-A-Z0-9+&amp;@#\/%=~_ |$?!:,.]*\)|[A-Z0-9+&amp;@#\/%=~_ |$]))</value>
+            </setting>
         </GetURLContent.Properties.Settings>
     </applicationSettings>
 </configuration>
