--- a/GetURLContent/Properties/Settings.settings
+++ b/GetURLContent/Properties/Settings.settings
@@ -8,5 +8,11 @@
     <Setting Name="RegexPatternSecond" Type="System.String" Scope="Application">
       <Value Profile="(Default)">(\b(?:(?:https?|ftp|file|[A-Za-z]+):\/\/|www\.|ftp\.)(?:\([-A-Z0-9+&amp;@#\/%=~_ |$?!:,.]*\)|[-A-Z0-9+&amp;@#\/%=~_ |$?!:,.])*(?:\([-A-Z0-9+&amp;@#\/%=~_ |$?!:,.]*\)|[A-Z0-9+&amp;@#\/%=~_ |$]))</Value>
     </Setting>
+    <Setting Name="RegExPatternFirstImagezilla" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">&lt;img id="photo" src="(\b(?:(?:https?|ftp|file|[A-Za-z]+):\/\/|www\.|ftp\.)(?:\([-A-Z0-9+&amp;@#\/%=~_ |$?!:,.]*\)|[-A-Z0-9+&amp;@#\/%=~_ |$?!:,.])*(?:\([-A-Z0-9+&amp;@#\/%=~_ |$?!:,.]*\)|[A-Z0-9+&amp;@#\/%=~_ |$]))</Value>
+    </Setting>
+    <Setting Name="RegExPatternFirstForLinks" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">href="(\b(?:(?:https?|ftp|file|[A-Za-z]+):\/\/|www\.|ftp\.)(?:\([-A-Z0-9+&amp;@#\/%=~_ |$?!:,.]*\)|[-A-Z0-9+&amp;@#\/%=~_ |$?!:,.])*(?:\([-A-Z0-9+&amp;@#\/%=~_ |$?!:,.]*\)|[A-Z0-9+&amp;@#\/%=~_ |$]))</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
