--- a/GetURLContent/GetURLContent.csproj
+++ b/GetURLContent/GetURLContent.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormErrorList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormErrorList.Designer.cs">
+      <DependentUpon>FormErrorList.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormURLLink.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,6 +68,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormErrorList.resx">
+      <DependentUpon>FormErrorList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormURLLink.resx">
       <DependentUpon>FormURLLink.cs</DependentUpon>
