the next version

--- a/GetURLContent/App.config
+++ b/GetURLContent/App.config
@@ -22,6 +22,9 @@
             <setting name="RegExPatternFirstForLinks" serializeAs="String">
                 <value>href="(\b(?:(?:https?|ftp|file|[A-Za-z]+):\/\/|www\.|ftp\.)(?:\([-A-Z0-9+&amp;@#\/%=~_ |$?!:,.]*\)|[-A-Z0-9+&amp;@#\/%=~_ |$?!:,.])*(?:\([-A-Z0-9+&amp;@#\/%=~_ |$?!:,.]*\)|[A-Z0-9+&amp;@#\/%=~_ |$]))</value>
             </setting>
+            <setting name="RegExPatternFirstForLinksGallerySense" serializeAs="String">
+                <value>href='(\b(?:(?:https?|ftp|file|[A-Za-z]+):\/\/|www\.|ftp\.)(?:\([-A-Z0-9+&amp;@#\/%=~_ |$?!:,.]*\)|[-A-Z0-9+&amp;@#\/%=~_ |$?!:,.])*(?:\([-A-Z0-9+&amp;@#\/%=~_ |$?!:,.]*\)|[A-Z0-9+&amp;@#\/%=~_ |$]))</value>
+            </setting>
         </GetURLContent.Properties.Settings>
     </applicationSettings>
 </configuration>
