--- a/GetURLContent/Properties/Settings.settings
+++ b/GetURLContent/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="RegExPatternFirstForLinksGallerySense" Type="System.String" Scope="Application">
       <Value Profile="(Default)">href='(\b(?:(?:https?|ftp|file|[A-Za-z]+):\/\/|www\.|ftp\.)(?:\([-A-Z0-9+&amp;@#\/%=~_ |$?!:,.]*\)|[-A-Z0-9+&amp;@#\/%=~_ |$?!:,.])*(?:\([-A-Z0-9+&amp;@#\/%=~_ |$?!:,.]*\)|[A-Z0-9+&amp;@#\/%=~_ |$]))</Value>
     </Setting>
+    <Setting Name="tbTargetDownloadFolder" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
