--- a/GetURLContent/App.config
+++ b/GetURLContent/App.config
@@ -28,6 +28,9 @@
             <setting name="RegExPatternFirstForLinksGallerySense" serializeAs="String">
                 <value>href='(\b(?:(?:https?|ftp|file|[A-Za-z]+):\/\/|www\.|ftp\.)(?:\([-A-Z0-9+&amp;@#\/%=~_ |$?!:,.]*\)|[-A-Z0-9+&amp;@#\/%=~_ |$?!:,.])*(?:\([-A-Z0-9+&amp;@#\/%=~_ |$?!:,.]*\)|[A-Z0-9+&amp;@#\/%=~_ |$]))</value>
             </setting>
+            <setting name="TempDir" serializeAs="String">
+                <value>F:\TEMP\</value>
+            </setting>
         </GetURLContent.Properties.Settings>
     </applicationSettings>
     <userSettings>
