--- a/GetURLContent/Properties/Settings.settings
+++ b/GetURLContent/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="tbTargetDownloadFolder" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="TempDir" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">F:\TEMP\</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
